# BaiduPCs-cmake-nanopi

./: CMakeLists.txt  README  build.sh  toolchain.cmake
Debug/: BaiduPCs
src/: shell.c
src/pcs/: .cJSON.c.swp  .pcs.c.swo  .pcs.c.swp  cJSON.c  pcs.c  pcs.h
